Add NewGame Protocol API endpoint

--- a/Spaceship.API/Properties/launchSettings.json
+++ b/Spaceship.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Spaceship.API": {
+    "Spaceship.ProtocolAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
