--- a/Spaceship.API/Spaceship.ProtocolAPI.csproj
+++ b/Spaceship.API/Spaceship.ProtocolAPI.csproj
@@ -1,13 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Spaceship.DataAccess\Spaceship.DataAccess.csproj" />
   </ItemGroup>
-
 </Project>
