--- a/Spaceship.UserAPI/Spaceship.UserAPI.csproj
+++ b/Spaceship.UserAPI/Spaceship.UserAPI.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Spaceship.API\Spaceship.ProtocolAPI.csproj" />
+    <ProjectReference Include="..\Spaceship.DataAccess\Spaceship.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
